--- a/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_landing/config/install/field.storage.node.field_lp_layout.yml
+++ b/docroot/profiles/contrib/openy/modules/openy_features/openy_node/modules/openy_node_landing/config/install/field.storage.node.field_lp_layout.yml
@@ -25,6 +25,9 @@ settings:
     -
       value: two_column_fixed
       label: 'Two Columns with fixed sidebar (sticky at the top)'
+    -
+      value: three_columns
+      label: 'Three Columns'
   allowed_values_function: ''
 module: options
 locked: false
