Add "Technical Name" field and "Retention Campaigns" dashboard.

--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
@@ -26,6 +26,7 @@ dependencies:
     - field.field.node.campaign.field_campaign_registration_goal
     - field.field.node.campaign.field_campaign_start_date
     - field.field.node.campaign.field_campaign_stream_type
+    - field.field.node.campaign.field_campaign_technical_name
     - field.field.node.campaign.field_campaign_timezone
     - field.field.node.campaign.field_campaign_utilization_goal
     - field.field.node.campaign.field_campaign_winners_prizes
@@ -77,7 +78,7 @@ third_party_settings:
         - field_campaign_payment_types
         - group_age_range
       parent_name: ''
-      weight: 16
+      weight: 17
       format_type: fieldset
       format_settings:
         id: ''
@@ -106,7 +107,7 @@ third_party_settings:
         - field_campaign_end_date
         - field_campaign_timezone
       parent_name: ''
-      weight: 11
+      weight: 12
       format_type: fieldset
       format_settings:
         id: ''
@@ -121,7 +122,7 @@ third_party_settings:
         - field_goal_check_ins_start_date
         - field_goal_check_ins_end_date
       parent_name: ''
-      weight: 15
+      weight: 16
       format_type: fieldset
       format_settings:
         label: 'Visits goal'
@@ -137,7 +138,7 @@ third_party_settings:
         - group_registration_messages
         - group_general_messages
       parent_name: ''
-      weight: 20
+      weight: 21
       format_type: fieldset
       format_settings:
         id: ''
@@ -215,7 +216,7 @@ third_party_settings:
         - field_ways_to_earn_entries
         - field_flip_cards_cover_image
       parent_name: ''
-      weight: 21
+      weight: 22
       format_type: details
       format_settings:
         id: ''
@@ -228,7 +229,7 @@ third_party_settings:
         - field_campaign_pages
         - field_pause_landing_page
       parent_name: ''
-      weight: 10
+      weight: 11
       format_type: fieldset
       format_settings:
         id: ''
@@ -256,7 +257,7 @@ content:
     region: content
   field_activities_options:
     type: options_buttons
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -296,7 +297,7 @@ content:
     type: number
     region: content
   field_campaign_fitness_category:
-    weight: 17
+    weight: 18
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -326,7 +327,7 @@ content:
     type: string_textfield
     region: content
   field_campaign_image:
-    weight: 8
+    weight: 9
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -409,10 +410,18 @@ content:
     region: content
   field_campaign_stream_type:
     type: options_select
-    weight: 19
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_campaign_technical_name:
+    weight: 8
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_campaign_timezone:
     weight: 21
     settings: {  }
@@ -429,7 +438,7 @@ content:
     third_party_settings: {  }
   field_campaign_winners_prizes:
     type: entity_reference_paragraphs
-    weight: 18
+    weight: 19
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -440,7 +449,7 @@ content:
     third_party_settings: {  }
     region: content
   field_enable_activities_counter:
-    weight: 13
+    weight: 14
     settings:
       display_label: true
     third_party_settings: {  }
@@ -529,7 +538,7 @@ content:
     type: number
     region: content
   field_pause_campaign:
-    weight: 9
+    weight: 10
     settings:
       display_label: true
     third_party_settings: {  }
@@ -609,7 +618,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   field_tracking_actv_goal_desc:
-    weight: 14
+    weight: 15
     settings:
       rows: 5
       placeholder: ''
@@ -672,7 +681,7 @@ content:
     third_party_settings: {  }
     region: content
   url_redirects:
-    weight: 22
+    weight: 23
     region: content
     settings: {  }
     third_party_settings: {  }
