[YMCA-1800] pr fixes

--- a/docroot/sites/default/config/staging/field.storage.node.field_lp_layout.yml
+++ b/docroot/sites/default/config/staging/field.storage.node.field_lp_layout.yml
@@ -20,8 +20,14 @@ settings:
       value: two_column
       label: 'Two Columns'
     -
+      value: two_column_left
+      label: 'Two Columns Left'
+    -
       value: two_column_fixed
       label: 'Two Columns with fixed sidebar (sticky at the top)'
+    -
+      value: three_columns
+      label: 'Three Columns'
   allowed_values_function: ''
 module: options
 locked: false
