--- a/docroot/sites/default/config/staging/core.entity_form_display.node.landing_page.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_form_display.node.landing_page.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.landing_page.field_lp_layout
     - field.field.node.landing_page.field_meta_tags
     - field.field.node.landing_page.field_sidebar_content
+    - field.field.node.landing_page.field_sidebar_content_extra
     - node.type.landing_page
   module:
     - field_group
@@ -21,7 +22,7 @@ third_party_settings:
       children:
         - field_header_content
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: tab
       format_settings:
         id: ''
@@ -34,7 +35,7 @@ third_party_settings:
       children:
         - field_content
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: tab
       format_settings:
         id: ''
@@ -47,7 +48,7 @@ third_party_settings:
       children:
         - field_sidebar_content
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: tab
       format_settings:
         id: ''
@@ -60,7 +61,7 @@ third_party_settings:
       children:
         - field_bottom_content
       parent_name: ''
-      weight: 5
+      weight: 7
       format_type: tab
       format_settings:
         id: ''
@@ -69,6 +70,19 @@ third_party_settings:
         description: ''
         required_fields: true
       label: 'Bottom Area'
+    group_sidebar_extra_area:
+      children:
+        - field_sidebar_content_extra
+      parent_name: ''
+      weight: 6
+      format_type: tab
+      format_settings:
+        id: ''
+        classes: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+      label: 'Sidebar Extra Area'
 id: node.landing_page.default
 targetEntityType: node
 bundle: landing_page
@@ -83,7 +97,7 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -95,6 +109,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
     type: entity_reference_paragraphs
     region: content
@@ -106,6 +121,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
     type: entity_reference_paragraphs
     region: content
@@ -117,6 +133,7 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
     type: entity_reference_paragraphs
     region: content
@@ -127,7 +144,7 @@ content:
     type: options_select
     region: content
   field_meta_tags:
-    weight: 26
+    weight: 14
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
@@ -140,8 +157,21 @@ content:
       edit_mode: open
       add_mode: dropdown
       form_display_mode: default
+      default_paragraph_type: ''
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
+  field_sidebar_content_extra:
+    type: entity_reference_paragraphs
+    weight: 19
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
     region: content
   langcode:
     type: language_select
@@ -150,9 +180,15 @@ content:
     settings:
       include_locked: true
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 17
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 12
     settings: {  }
     third_party_settings: {  }
     region: content
@@ -160,17 +196,17 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 10
     third_party_settings: {  }
     region: content
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 30
+    weight: 15
     settings: {  }
     third_party_settings: {  }
     region: content
   scheduler_settings:
-    weight: 20
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -178,14 +214,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 121
+    weight: 18
     third_party_settings: {  }
     region: content
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 11
     third_party_settings: {  }
     region: content
   title:
@@ -198,7 +234,7 @@ content:
     region: content
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -207,7 +243,7 @@ content:
     region: content
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 30
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     region: content
