--- a/composer.json
+++ b/composer.json
@@ -178,7 +178,7 @@
         "drupal/features": "3.7",
         "drupal/confi": "1.4",
         "drupal/config_update": "1.5",
-        "drupal/entity": "8.x-1.0-beta3",
+        "drupal/entity": "1.0-beta3",
         "drupal/media_entity": "1.x-dev",
         "drupal/media_entity_image": "1.x-dev",
         "drupal/media_entity_document": "1.x-dev",
@@ -188,7 +188,7 @@
         "drupal/pathauto": "1.1",
         "drupal/ctools": "3.0",
         "drupal/token": "1.1",
-        "drupal/field_group": "8.x-3.0-beta1",
+        "drupal/field_group": "3.0-beta1",
         "drupal/video_embed_field": "1.5",
         "drupal/jquery_colorpicker": "1.3",
         "drupal/entity_browser": "1.4",
@@ -202,7 +202,7 @@
         "drupal/migrate_tools": "3.0-rc1",
         "drupal/migrate_source_csv": "2.1",
         "drupal/verf": "1.0-beta6",
-        "drupal/simple_menu_icons": "8.x-2.1",
+        "drupal/simple_menu_icons": "2.1",
         "drupal/views_infinite_scroll": "1.5",
         "drupal/slick": "1.0",
         "drupal/blazy": "1.0-rc2",
@@ -216,8 +216,8 @@
         "library-ckeditor/colorbutton": "4.7.0",
         "library-smonetti/btbutton": "1.0.1",
         "drupal/slick_views": "1.0-rc2",
-        "drupal/libraries": "8.x-3.0-alpha1",
-        "drupal/datalayer": "8.x-1.0-beta1",
+        "drupal/libraries": "3.0-alpha1",
+        "drupal/datalayer": "1.0-beta1",
         "drupal/optimizely": "3.0",
         "drupal/google_tag": "1.0",
         "drupal/google_analytics": "2.2",
