--- a/docroot/sites/default/config/staging/node.type.article.yml
+++ b/docroot/sites/default/config/staging/node.type.article.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - scheduler
 third_party_settings:
   menu_ui:
     available_menus:
@@ -16,7 +17,18 @@ third_party_settings:
       - locations
       - swimming
     parent: 'camps:'
-name: Page
+  scheduler:
+    expand_fieldset: when_required
+    fields_display_mode: vertical_tab
+    publish_enable: false
+    publish_past_date: error
+    publish_required: false
+    publish_revision: false
+    publish_touch: false
+    unpublish_enable: false
+    unpublish_required: false
+    unpublish_revision: false
+name: '[YGTC] Page (deprecated)'
 type: article
 description: ''
 help: ''
