--- a/docroot/sites/default/config/staging/node.type.blog.yml
+++ b/docroot/sites/default/config/staging/node.type.blog.yml
@@ -4,14 +4,28 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - scheduler
 third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: 'Blog post'
+  scheduler:
+    expand_fieldset: when_required
+    fields_display_mode: vertical_tab
+    publish_enable: true
+    publish_past_date: error
+    publish_required: false
+    publish_revision: false
+    publish_touch: false
+    unpublish_enable: true
+    unpublish_required: false
+    unpublish_revision: false
+_core:
+  default_config_hash: lF7BgDHbNwOeBM76BWXy7S3Jc9UPfHJf1JfMdzg-OCU
+name: '[YGTC] Blog Post'
 type: blog
-description: ''
+description: 'Blog Post content type is used for adding blog posts on the site.'
 help: ''
 new_revision: false
 preview_mode: 1
-display_submitted: false
+display_submitted: true
