--- a/docroot/sites/default/config/staging/node.type.location.yml
+++ b/docroot/sites/default/config/staging/node.type.location.yml
@@ -4,11 +4,23 @@ status: true
 dependencies:
   module:
     - menu_ui
+    - scheduler
 third_party_settings:
   menu_ui:
     available_menus: {  }
     parent: ''
-name: Location
+  scheduler:
+    expand_fieldset: when_required
+    fields_display_mode: vertical_tab
+    publish_enable: false
+    publish_past_date: error
+    publish_required: false
+    publish_revision: false
+    publish_touch: false
+    unpublish_enable: false
+    unpublish_required: false
+    unpublish_revision: false
+name: '[YGTC] Location'
 type: location
 description: Location.
 help: ''
