[YMCA-1816] Fix image view for anonymous

--- a/docroot/sites/default/config/staging/user.role.anonymous.yml
+++ b/docroot/sites/default/config/staging/user.role.anonymous.yml
@@ -7,16 +7,21 @@ label: 'Anonymous user'
 weight: 0
 is_admin: false
 permissions:
+  - 'access AB variants'
+  - 'access Personal Training forms'
+  - 'access YMCA location schedules'
+  - 'access YMCA locations'
+  - 'access comments'
   - 'access content'
+  - 'access site-wide contact form'
+  - 'access sitemap'
+  - 'book personal training time slots'
+  - 'create workflow workflow_transition'
+  - 'restful get openy_my_y_api_appointments'
+  - 'restful get openy_my_y_api_sessions'
+  - 'restful get openy_my_y_api_visits'
+  - 'search content'
   - 'use text format restricted_html'
   - 'view files'
-  - 'access comments'
-  - 'access site-wide contact form'
-  - 'search content'
-  - 'access sitemap'
-  - 'create workflow workflow_transition'
-  - 'access YMCA locations'
-  - 'access YMCA location schedules'
-  - 'access Personal Training forms'
-  - 'book personal training time slots'
-  - 'access AB variants'
+  - 'view media'
+  - 'view published camp du nord personify product entities'
