--- a/modules/openy_features/openy_prgf/modules/openy_prgf_campaign/config/install/field.field.paragraph.campaign_activity_menu.field_prgf_activity_visits.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_campaign/config/install/field.field.paragraph.campaign_activity_menu.field_prgf_activity_visits.yml
@@ -2,20 +2,20 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_prgf_campaign_activity
-    - paragraphs.paragraphs_type.campaign_activity
+    - field.storage.paragraph.field_prgf_activity_visits
+    - paragraphs.paragraphs_type.campaign_activity_menu
   module:
     - datalayer
     - plugin
 third_party_settings:
   datalayer:
     expose: 0
-    label: field_prgf_campaign_activity
-id: paragraph.campaign_activity.field_prgf_campaign_activity
-field_name: field_prgf_campaign_activity
+    label: field_prgf_activity_visits
+id: paragraph.campaign_activity_menu.field_prgf_activity_visits
+field_name: field_prgf_activity_visits
 entity_type: paragraph
-bundle: campaign_activity
-label: 'Campaign Activity'
+bundle: campaign_activity_menu
+label: 'Achieve Your Visit Goal'
 description: ''
 required: true
 translatable: false
@@ -24,7 +24,7 @@ default_value:
     plugin_id: campaign_activity_visits_block
     plugin_configuration:
       id: campaign_activity_visits_block
-      label: 'Campaign Activity Tracking'
+      label: 'Campaign Activity Visits'
       provider: openy_campaign
       label_display: '0'
     plugin_configuration_schema_id: block.settings.campaign_activity_visits_block
