Enable houston alerts to check if they are still working

--- a/modules/openy_features/openy_demo_content/modules/openy_demo_nalert/config/install/migrate_plus.migration.node_alert.yml
+++ b/modules/openy_features/openy_demo_content/modules/openy_demo_nalert/config/install/migrate_plus.migration.node_alert.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   enforced:
     module:
-      - openy_node_alert
+      - openy_alerts
       - openy_demo_nlanding
 id: openy_demo_node_alert
 migration_tags: {  }
