Enable houston alerts to check if they are still working

--- a/modules/openy_features/openy_node/modules/openy_alerts/openy_alerts.info.yml
+++ b/modules/openy_features/openy_node/modules/openy_alerts/openy_alerts.info.yml
@@ -18,7 +18,7 @@ dependencies:
 #  - openy:openy_node_testimonial
   - drupal:options
   - drupal:path
-  - scheduled_updates:scheduled_updates
+#  - scheduled_updates:scheduled_updates
   - slick_views:slick_views
   - drupal:text
   - drupal:user
