--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_view_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_view_display.node.campaign.default.yml
@@ -26,7 +26,6 @@ dependencies:
     - field.field.node.campaign.field_campaign_registration_goal
     - field.field.node.campaign.field_campaign_start_date
     - field.field.node.campaign.field_campaign_stream_type
-    - field.field.node.campaign.field_campaign_technical_name
     - field.field.node.campaign.field_campaign_timezone
     - field.field.node.campaign.field_campaign_utilization_goal
     - field.field.node.campaign.field_campaign_winners_prizes
@@ -221,14 +220,6 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_campaign_technical_name:
-    weight: 146
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
   field_campaign_timezone:
     weight: 143
     label: above
@@ -400,13 +391,6 @@ content:
     third_party_settings: {  }
     type: string
     region: content
-  field_tracking_actv_goal_desc:
-    weight: 145
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
   field_ways_to_earn_entries:
     weight: 134
     label: above
@@ -424,6 +408,7 @@ hidden:
   field_campaign_utilization_goal: true
   field_pause_campaign: true
   field_token_register_link_text: true
+  field_tracking_actv_goal_desc: true
   field_utilization_activities: true
   langcode: true
   links: true
