--- a/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_campaign/config/install/core.entity_form_display.node.campaign.default.yml
@@ -26,7 +26,6 @@ dependencies:
     - field.field.node.campaign.field_campaign_registration_goal
     - field.field.node.campaign.field_campaign_start_date
     - field.field.node.campaign.field_campaign_stream_type
-    - field.field.node.campaign.field_campaign_technical_name
     - field.field.node.campaign.field_campaign_timezone
     - field.field.node.campaign.field_campaign_utilization_goal
     - field.field.node.campaign.field_campaign_winners_prizes
@@ -58,6 +57,7 @@ dependencies:
     - image.style.thumbnail
     - node.type.campaign
   module:
+    - content_moderation
     - datetime
     - field_group
     - image
@@ -78,7 +78,7 @@ third_party_settings:
         - field_campaign_payment_types
         - group_age_range
       parent_name: ''
-      weight: 17
+      weight: 15
       format_type: fieldset
       format_settings:
         id: ''
@@ -107,7 +107,7 @@ third_party_settings:
         - field_campaign_end_date
         - field_campaign_timezone
       parent_name: ''
-      weight: 12
+      weight: 11
       format_type: fieldset
       format_settings:
         id: ''
@@ -122,7 +122,7 @@ third_party_settings:
         - field_goal_check_ins_start_date
         - field_goal_check_ins_end_date
       parent_name: ''
-      weight: 16
+      weight: 14
       format_type: fieldset
       format_settings:
         label: 'Visits goal'
@@ -138,7 +138,7 @@ third_party_settings:
         - group_registration_messages
         - group_general_messages
       parent_name: ''
-      weight: 21
+      weight: 19
       format_type: fieldset
       format_settings:
         id: ''
@@ -216,7 +216,7 @@ third_party_settings:
         - field_ways_to_earn_entries
         - field_flip_cards_cover_image
       parent_name: ''
-      weight: 22
+      weight: 20
       format_type: details
       format_settings:
         id: ''
@@ -229,7 +229,7 @@ third_party_settings:
         - field_campaign_pages
         - field_pause_landing_page
       parent_name: ''
-      weight: 11
+      weight: 10
       format_type: fieldset
       format_settings:
         id: ''
@@ -257,7 +257,7 @@ content:
     region: content
   field_activities_options:
     type: options_buttons
-    weight: 13
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -297,7 +297,7 @@ content:
     type: number
     region: content
   field_campaign_fitness_category:
-    weight: 18
+    weight: 16
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -327,7 +327,7 @@ content:
     type: string_textfield
     region: content
   field_campaign_image:
-    weight: 9
+    weight: 8
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -410,18 +410,10 @@ content:
     region: content
   field_campaign_stream_type:
     type: options_select
-    weight: 20
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_campaign_technical_name:
-    weight: 8
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
   field_campaign_timezone:
     weight: 21
     settings: {  }
@@ -438,7 +430,7 @@ content:
     third_party_settings: {  }
   field_campaign_winners_prizes:
     type: entity_reference_paragraphs
-    weight: 19
+    weight: 17
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -449,7 +441,7 @@ content:
     third_party_settings: {  }
     region: content
   field_enable_activities_counter:
-    weight: 14
+    weight: 13
     settings:
       display_label: true
     third_party_settings: {  }
@@ -538,7 +530,7 @@ content:
     type: number
     region: content
   field_pause_campaign:
-    weight: 10
+    weight: 9
     settings:
       display_label: true
     third_party_settings: {  }
@@ -617,14 +609,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_tracking_actv_goal_desc:
-    weight: 15
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
   field_utilization_activities:
     type: options_buttons
     weight: 16
@@ -643,6 +627,12 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
+  moderation_state:
+    type: moderation_state_default
+    weight: 100
+    settings: {  }
+    region: content
+    third_party_settings: {  }
   path:
     type: path
     weight: 7
@@ -656,6 +646,13 @@ content:
     weight: 4
     third_party_settings: {  }
     region: content
+  status:
+    type: boolean_checkbox
+    settings:
+      display_label: true
+    weight: 120
+    region: content
+    third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
@@ -681,12 +678,13 @@ content:
     third_party_settings: {  }
     region: content
   url_redirects:
-    weight: 23
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   field_campaign_menu: true
   field_campaign_palette: true
+  field_tracking_actv_goal_desc: true
   publish_on: true
   unpublish_on: true
