--- a/themes/openy_themes/openy_campaign_theme/config/install/block.block.openy_campaign_theme_branding.yml
+++ b/themes/openy_themes/openy_campaign_theme/config/install/block.block.openy_campaign_theme_branding.yml
@@ -18,5 +18,5 @@ settings:
   label_display: '0'
   use_site_logo: true
   use_site_name: false
-  use_site_slogan: true
+  use_site_slogan: false
 visibility: {  }
