--- a/themes/openy_themes/openy_campaign_theme/config/install/block.block.openy_campaign_theme_tabs.yml
+++ b/themes/openy_themes/openy_campaign_theme/config/install/block.block.openy_campaign_theme_tabs.yml
@@ -1,19 +1,19 @@
 langcode: en
 status: true
 dependencies:
-  module:
-    - system
   theme:
     - openy_campaign_theme
-id: openy_campaign_theme_content
+id: openy_campaign_theme_tabs
 theme: openy_campaign_theme
 region: content
-weight: -4
+weight: -9
 provider: null
-plugin: system_main_block
+plugin: local_tasks_block
 settings:
-  id: system_main_block
-  label: 'Main page content'
-  provider: system
+  id: local_tasks_block
+  label: Tabs
+  provider: core
   label_display: '0'
+  primary: true
+  secondary: true
 visibility: {  }
