--- a/docroot/sites/default/config/staging/core.entity_view_display.node.landing_page.default.yml
+++ b/docroot/sites/default/config/staging/core.entity_view_display.node.landing_page.default.yml
@@ -43,7 +43,7 @@ content:
     region: content
   field_content:
     weight: 103
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -52,7 +52,7 @@ content:
     region: content
   field_header_content:
     weight: 102
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -61,21 +61,21 @@ content:
     region: content
   field_lp_layout:
     weight: 101
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_meta_tags:
     weight: 105
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
     region: content
   field_sidebar_content:
     weight: 104
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
@@ -85,7 +85,7 @@ content:
   field_sidebar_content_extra:
     type: entity_reference_revisions_entity_view
     weight: 106
-    label: above
+    label: hidden
     settings:
       view_mode: default
       link: ''
