--- a/docroot/reinstall.yml
+++ b/docroot/reinstall.yml
@@ -15,7 +15,7 @@
   tasks:
   - name: Include specific variables per environment
     include_vars: "devops/reinstall/{{ config_folder }}/environments/{{ pp_environment }}_env.yml"
-    tags: [ 'settings', 'pre-settings', 'post-settings', 'modules-enable', 'drush-commands' ]
+    tags: [ 'settings', 'pre-settings', 'post-settings', 'modules-enable', 'drush-commands' , 'shell-commands']
 
   - include: devops/reinstall/database_backup.yml
     when: make_backup
@@ -40,6 +40,9 @@
     when: workflow_type == "sql" and docker_sql
     tags: [ 'sql-workflow' ]
 
+  - include: devops/reinstall/shell_commands.yml
+    when: workflow_type == "sql"
+    tags: [ 'sql-workflow', 'shell-commands']
 
   - include: devops/reinstall/profile_workflow.yml
     when: workflow_type == "profile"
