--- a/docroot/devops/reinstall/vars/environments/default_env.yml
+++ b/docroot/devops/reinstall/vars/environments/default_env.yml
@@ -12,19 +12,11 @@ env:
     - { name: '$settings["install_profile"]', status: true, value: 'pp' }
     - { name: '$config["system.file"]["path"]["temporary"]', status: true, value: '/tmp' }
   shell_commands:
-#    - { name: 'Updating serialization module', status: true, arguments: "bin/drupal update:execute system"}
-#    - { name: 'Updating serialization module', status: true, arguments: "bin/drupal update:execute serialization"}
-#    - { name: 'Updating syslog module', status: true, arguments: "bin/drupal update:execute syslog"}
-#    - { name: 'Updating file module', status: true, arguments: "bin/drupal update:execute file"}
-#    - { name: 'Updating node module', status: true, arguments: "bin/drupal update:execute node"}
-#    - { name: 'Updating rest module', status: true, arguments: "Updating rest module"}
-#    - { name: 'Updating entity_browser module', status: true, arguments: "bin/drupal update:execute entity_browser"}
-#    - { name: 'Updating file_browser module', status: true, arguments: "Updating file_browser module"}
-#    - { name: 'Updating dropzonejs module', status: true, arguments: "bin/drupal update:execute dropzonejs"}
-#    - { name: 'Updating OpenY', status: true, arguments: "bin/drupal update:execute openy"}
-    - { name: 'Updating YMCA Master updates', status: true, arguments: "printf '%s\\n' \"'8234' '8235' '8236' '8237' '8238' '8239' '8240' '8241' '8242' '8243' '8244' '8245' '8246' '8247' '8248' '8249' '8250' '8251' '8252' '8253' '8254' '8255' '8256' '8257'\" | xargs bin/drupal update:execute ymca_master"}
-#    - { name: 'Updating YMCA Master rest updates', status: true, arguments: "bin/drupal update:execute ymca_master"}
-#    - { name: 'Updating rest modules', status: true, arguments: "printf '%s\\n' \"'webform' 'redirect' 'crop' 'openy_media' 'openy_media_document' 'openy_media_video' 'openy_node' 'openy_node_landing' 'openy_txnm_color' 'openy_prgf_small_banner' 'openy_prgf_simple_content' 'openy_prgf_2c' 'openy_block_custom_simple' 'openy_prgf'\" | xargs bin/drupal update:execute"}
+    # @todo Remove after OpenY Migration.
+    - { name: '[Openy Migrate] Updating OpenY', status: true, arguments: "echo system serialization syslog file node rest entity_browser file_browser dropzonejs openy | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
+    - { name: '[Openy Migrate] Updating YMCA Master specific updates', status: true, arguments: "echo 8234 8235 8236 8237 8238 8239 8240 8241 8242 8243 8244 8245 8246 8247 8248 8249 8250 8251 8252 8253 8254 8255 8256 8257 | xargs -n 1 | xargs -I item bin/drupal update:execute ymca_master item"}
+    - { name: '[Openy Migrate] Updating YMCA Master remaining updates', status: true, arguments: "bin/drupal update:execute ymca_master"}
+    - { name: '[Openy Migrate] Updating OpenY related features', status: true, arguments: "echo webform redirect crop openy_media openy_media_document openy_media_video openy_node openy_node_landing openy_txnm_color openy_prgf_small_banner openy_prgf_simple_content openy_prgf_2c openy_block_custom_simple openy_prgf | xargs -n 1 | xargs -I item bin/drupal update:execute item"}
   modules:
     - { name: 'config_inspector dblog stage_file_proxy', status: true }
   drush_commands:
