--- a/composer.json
+++ b/composer.json
@@ -147,11 +147,6 @@
             "docroot/libraries/{$name}": ["type:drupal-library"]
         },
         "patches": {
-            "drupal/simple_menu_icons": {
-                "2847964 - Clear cache after simple_menu_icons_css_generate": "https://www.drupal.org/files/issues/clear-cache-after-simple_menu_icons_css_generate-2847964.patch",
-                "2880544 - The theme implementations may not be rendered until all modules are loaded": "https://www.drupal.org/files/issues/theme-implementations-exception-2880544.patch",
-                "2937058 - Clear cache performance improvement": "https://www.drupal.org/files/issues/clear-cache-after-simple_menu_icons_css_generate-2847964-2.patch"
-            },
             "drupal/entity_browser": {
                 "2845037 - Fixed the issue of Call to a member function getConfigDependencyKey() on null on [Widget view], and [SelectionDisplay view]": "https://www.drupal.org/files/issues/2845037_15.patch"
             },
@@ -160,9 +155,6 @@
             },
             "drupal/plugin": {
                 "2647312 - Use SubFormState in plugin selectors": "https://www.drupal.org/files/issues/plugin_2647312_20.patch"
-            },
-            "drupal/views_field_formatter": {
-                "2874811 - Add option to show/hide empty views": "https://www.drupal.org/files/issues/Option-added-to-hide-empty-views-2874811.patch"
             },
             "drupal/core": {
                 "1236098 - Notice: Undefined index in _color_rewrite_stylesheet()": "https://www.drupal.org/files/issues/undefined-index-in-_color_rewrite_stylesheet-1236098-37.patch"
@@ -198,8 +190,8 @@
         "drupal/entity_embed": "1.0-beta2",
         "drupal/views_block_filter_block": "1.x-dev#29f6523ac806afadc48d9a6ab0c5eb13f6256a1a",
         "drupal/plugin": "2.5",
-        "drupal/migrate_plus": "3.0-rc1",
-        "drupal/migrate_tools": "3.0-rc1",
+        "drupal/migrate_plus": "4.0-beta3",
+        "drupal/migrate_tools": "4.0-beta3",
         "drupal/migrate_source_csv": "2.1",
         "drupal/verf": "1.0-beta6",
         "drupal/simple_menu_icons": "2.1",
@@ -244,6 +236,7 @@
         "drupal/video": "1.2",
         "drupal/easy_breadcrumb": "^1.6",
         "drupal/ckeditor_bootstrap_buttons": "^1.1",
-        "drupal/fontyourface": "^3.2"
+        "drupal/fontyourface": "^3.2",
+        "drupal/css_editor": "^1.2"
     }
 }
