--- a/openy.info.yml
+++ b/openy.info.yml
@@ -103,6 +103,7 @@ dependencies:
   - ckeditor_bootstrap_buttons
   - fontyourface
   - local_fonts
+  - css_editor
   # OpenY features.
   - openy_svg_formatter
   - openy_media_image
