--- a/composer.json
+++ b/composer.json
@@ -170,42 +170,42 @@
         }
     },
     "require": {
-        "php": ">=5.6 <=7.2",
+        "php": ">=5.6",
         "cweagans/composer-patches": "^1.5.0",
         "composer/installers": "^1.0",
         "drupal-composer/drupal-scaffold": "^2.0.0",
-        "drupal/core": "8.5.1",
-        "drupal/features": "3.7",
+        "drupal/core": "8.4.6",
+        "drupal/features": "3.5",
         "drupal/confi": "1.4",
         "drupal/config_update": "1.5",
-        "drupal/entity": "1.0-beta3",
+        "drupal/entity": "1.0-beta1",
         "drupal/media_entity": "1.x-dev",
         "drupal/media_entity_image": "1.x-dev",
         "drupal/media_entity_document": "1.x-dev",
-        "drupal/address": "1.3",
+        "drupal/address": "1.2",
         "drupal/paragraphs": "1.2",
-        "drupal/entity_reference_revisions": "1.4",
-        "drupal/pathauto": "1.1",
+        "drupal/entity_reference_revisions": "1.3",
+        "drupal/pathauto": "1.0",
         "drupal/ctools": "3.0",
-        "drupal/token": "1.1",
-        "drupal/field_group": "3.0-beta1",
+        "drupal/token": "1.0",
+        "drupal/field_group": "1.0",
         "drupal/video_embed_field": "1.5",
         "drupal/jquery_colorpicker": "1.3",
-        "drupal/entity_browser": "1.4",
+        "drupal/entity_browser": "1.3",
         "drupal/dropzonejs": "1.0-alpha8",
         "drupal/inline_entity_form": "1.0-beta1",
         "drupal/embed": "1.0",
         "drupal/entity_embed": "1.0-beta2",
-        "drupal/views_block_filter_block": "1.x-dev#29f6523ac806afadc48d9a6ab0c5eb13f6256a1a",
+        "drupal/views_block_filter_block": "1.x-dev",
         "drupal/plugin": "2.5",
-        "drupal/migrate_plus": "3.0-rc1",
-        "drupal/migrate_tools": "3.0-rc1",
-        "drupal/migrate_source_csv": "2.1",
+        "drupal/migrate_plus": "3.0-beta1",
+        "drupal/migrate_tools": "3.0-beta1",
+        "drupal/migrate_source_csv": "2.0",
         "drupal/verf": "1.0-beta6",
-        "drupal/simple_menu_icons": "2.1",
+        "drupal/simple_menu_icons": "1.x-dev",
         "drupal/views_infinite_scroll": "1.5",
         "drupal/slick": "1.0",
-        "drupal/blazy": "1.0-rc2",
+        "drupal/blazy": "1.0-rc1",
         "drupal/geolocation": "1.11",
         "library-jaypan/jquery_colorpicker": "1.0.1",
         "library-enyo/dropzone": "4.3.0",
@@ -216,30 +216,30 @@
         "library-ckeditor/colorbutton": "4.7.0",
         "library-smonetti/btbutton": "1.0.1",
         "drupal/slick_views": "1.0-rc2",
-        "drupal/libraries": "3.0-alpha1",
-        "drupal/datalayer": "1.0-beta1",
+        "drupal/libraries": "3.x-dev",
+        "drupal/datalayer": "1.x-dev",
         "drupal/optimizely": "3.0",
         "drupal/google_tag": "1.0",
         "drupal/google_analytics": "2.2",
-        "drupal/simple_sitemap": "2.11",
-        "drupal/redirect": "1.1",
-        "drupal/metatag": "1.5",
+        "drupal/simple_sitemap": "2.9",
+        "drupal/redirect": "1.0-beta1",
+        "drupal/metatag": "1.3",
         "drupal/scheduler": "1.0",
-        "drupal/webform": "5.0-rc7",
+        "drupal/webform": "5.0-beta24",
         "drupal/captcha": "1.0-beta1",
-        "drupal/recaptcha": "2.3",
-        "drupal/rabbit_hole": "1.0-beta4",
-        "drupal/admin_toolbar": "1.23",
+        "drupal/recaptcha": "2.2",
+        "drupal/rabbit_hole": "1.0-beta3",
+        "drupal/admin_toolbar": "1.20",
         "drupal/panelbutton": "1.1",
         "drupal/colorbutton": "1.1",
-        "drupal/better_exposed_filters": "3.0-alpha3",
+        "drupal/better_exposed_filters": "3.0-alpha2",
         "drupal/custom_formatters": "3.0-alpha1",
-        "drupal/token_filter": "1.0-beta2",
-        "drupal/views_field_formatter": "1.7",
-        "drupal/lndr": "1.15",
+        "drupal/token_filter": "1.0-beta1",
+        "drupal/views_field_formatter": "1.5",
+        "drupal/lndr": "1.11",
         "doctrine/inflector": "1.1.*",
-        "drupal/crop": "1.5",
-        "drupal/focal_point": "1.0-beta6",
+        "drupal/crop": "1.3",
+        "drupal/focal_point": "1.0-beta5",
         "drupal/media_entity_video": "1.0-beta2",
         "drupal/video": "1.2",
         "drupal/easy_breadcrumb": "^1.6",
