--- a/docroot/modules/features/ygtc_blog/config/install/field.field.node.blog.field_image.yml
+++ b/docroot/modules/features/ygtc_blog/config/install/field.field.node.blog.field_image.yml
@@ -3,9 +3,14 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_image
+    - media_entity.bundle.image
     - node.type.blog
   module:
-    - image
+    - datalayer
+third_party_settings:
+  datalayer:
+    expose: 0
+    label: ''
 id: node.blog.field_image
 field_name: field_image
 entity_type: node
@@ -13,25 +18,16 @@ bundle: blog
 label: Image
 description: 'The recommended size is 185x140 pixels.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'png gif jpg jpeg svg'
-  max_filesize: ''
-  max_resolution: ''
-  min_resolution: ''
-  alt_field: true
-  alt_field_required: true
-  title_field: false
-  title_field_required: false
-  default_image:
-    uuid: ''
-    alt: ''
-    title: ''
-    width: null
-    height: null
-  handler: 'default:file'
-  handler_settings: {  }
-field_type: image
+  handler: 'default:media'
+  handler_settings:
+    target_bundles:
+      image: image
+    sort:
+      field: _none
+    auto_create: false
+    auto_create_bundle: ''
+field_type: entity_reference
