cleanup code from review notes

--- a/modules/openy_features/openy_prgf/modules/openy_prgf_event_latest/config/install/field.field.paragraph.upcoming_events.field_prgf_block.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_event_latest/config/install/field.field.paragraph.upcoming_events.field_prgf_block.yml
@@ -16,7 +16,7 @@ field_name: field_prgf_block
 entity_type: paragraph
 bundle: upcoming_events
 label: Block
-description: ''
+description: 'Block section with upcuming events.'
 required: true
 translatable: true
 default_value:
