--- a/modules/openy_features/openy_prgf/modules/openy_prgf_event_latest/openy_prgf_event_latest.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_event_latest/openy_prgf_event_latest.info.yml
@@ -2,7 +2,7 @@ name: 'OpenY Paragraph Latest Event Posts'
 description: 'OpenY Paragraph Latest Event Posts'
 type: module
 core: 8.x
-package: 'YMCA Maryland'
+package: 'OpenY'
 dependencies:
   - datalayer
   - field
