--- a/modules/openy_features/openy_node/modules/openy_node_event/openy_node_event.libraries.yml
+++ b/modules/openy_features/openy_node/modules/openy_node_event/openy_node_event.libraries.yml
@@ -1,4 +1,5 @@
 atc_base:
+  version: 1.5
   css:
     component:
       '//addtocalendar.com/atc/1.5/atc-base.css': {type: external}
@@ -6,15 +7,18 @@ atc_base:
     '//addtocalendar.com/atc/1.5/atc.min.js': { type: external, minified: true }
 
 atc_glow_orange:
+  version: 1.5
   css:
     component:
       '//addtocalendar.com/atc/1.5/atc-style-glow-orange.css': {type: external}
 
 atc_blue:
+  version: 1.5
   css:
     component:
       '//addtocalendar.com/atc/1.5/atc-style-blue.css': {type: external}
 
 event_custom:
+  version: 1.0
   js:
     js/openy_node_event.js: {}
