--- a/modules/openy_features/openy_prgf/modules/openy_prgf_event_latest/config/install/field.field.paragraph.upcoming_events.field_prgf_title.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_event_latest/config/install/field.field.paragraph.upcoming_events.field_prgf_title.yml
@@ -15,7 +15,7 @@ field_name: field_prgf_title
 entity_type: paragraph
 bundle: upcoming_events
 label: Title
-description: ''
+description: 'Title of the upcuming events section.'
 required: false
 translatable: true
 default_value: {  }
