--- a/modules/openy_features/openy_prgf/modules/openy_prgf_event_listing/openy_prgf_event_listing.info.yml
+++ b/modules/openy_features/openy_prgf/modules/openy_prgf_event_listing/openy_prgf_event_listing.info.yml
@@ -2,7 +2,7 @@ name: 'OpenY Paragraph Event Posts Listing'
 description: 'OpenY Paragraph Event Posts Listing.'
 type: module
 core: 8.x
-package: 'YMCA Maryland'
+package: 'OpenY'
 dependencies:
   - datalayer
   - field
